<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="new_game">New Game</string>
    <string name="exit">EXIT</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="player_1_name_symbol_x">Player 1 Name (Symbol : X)</string>
    <string name="player_2_name_symbol_o">Player 2 Name (Symbol : O)</string>
    <string name="start_game">Start New Game</string>
    <string name="symbol_x">Symbol : X</string>
    <string name="symbol_o">Symbol : O</string>
    <string name="textview">TextView</string>
    <string name="back">Back</string>
    <string name="dark_theme">Switch To Dark Theme</string>
</resources>