<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/the_girl_next_door"
        android:gravity="center_horizontal"
        android:text="@string/tic_tac_toe"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="175dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:text="@string/new_game"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:text="@string/exit"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/darkTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        android:text="@string/dark_theme"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
</LinearLayout>