<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutNames"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".PlayerNames">

    <EditText
        android:id="@+id/etPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.4"
        android:width="250dp"
        android:autofillHints="@string/player_1_name_symbol_x"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/player_1_name_symbol_x"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:width="250dp"
        android:autofillHints="@string/player_2_name_symbol_o"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/player_2_name_symbol_o"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.6"
        android:background="@color/colorAccent"
        android:text="@string/start_game"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:padding="10dp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>