<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Game">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPlayer1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tvPlayer2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:text="@string/symbol_x"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:text="@string/symbol_o"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn00"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn01"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn02"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn10"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn11"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn12"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn20"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn21"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn22"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:shadowColor="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-black"
        android:text="@string/back"
        android:textSize="18sp" />

</LinearLayout>